# advent-of-code-2023

./: pyproject.toml
01/: main.py
02/: main.py
03/: main.py
04/: main.py
05/: main.py
06/: main.py
07/: main.py
08/: main.py
09/: main.py
10/: main.py
11/: main.py
12/: main.py
13/: main.py
14/: main.py
15/: main.py
16/: main.py
17/: main.py
18/: main.py
19/: main.py
20/: main.py
21/: main.py
22/: main.py
23/: main.py
24/: main.py
25/: 25  25.gv  main.py
scripts/command/: new.sh
