[project]
name = "advent-of-code-2023"
version = "0.0.1"
description = ""
authors = [
    {name = "Yifan Wu", email = "tyivanwu@gmail.com"},
]
dependencies = [
    "black>=22.10.0",
    "ipython>=8.7.0",
    "sortedcontainers>=2.4.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool]
[tool.pdm]
[tool.pdm.scripts]
new = "bash scripts/command/new.sh"
delete = "bash scripts/command/delete.sh"
