[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Yifan Wu", email = "tyivanwu@gmail.com"},
]
dependencies = [
    "black>=22.10.0",
    "ipython>=8.7.0",
    "sortedcontainers>=2.4.0",
    "sympy>=1.12",
]
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"

[tool]
[tool.pdm]
[tool.pdm.scripts]
new = "bash scripts/command/new.sh"
delete = "bash scripts/command/delete.sh"
